# cuda_lessons

./: LICENSE  README.md
01_lesson/: 01_lesson.tex  post_mortem_painterVR.tex
01_practicle/: 01_practicle.tex
02_practicle/: 02_practicle.tex
03_practicle/: 03_practicle.tex
04_practicle/: 04_practicle.tex
05_practicle/: 05_practicle.tex
06_practicle/: 06_practicle.tex
07_practicle/: 07_practicle.tex
practicles/: CMakeLists.txt
practicles/src/helloworld/: CMakeLists.txt
practicles/src/raytracer/: CMakeLists.txt
practicles/src/raytracer/include/raytracer/: vector3.h
practicles/src/raytracer/src/: main.cu  vector3.cpp
practicles/src/tp01/: CMakeLists.txt
practicles/src/tp01/src/: lorem.txt  main.cu
rendu_de_TP/: rendu_de_TP.tex
